--- a/src/App.css
+++ b/src/App.css
@@ -11,22 +11,29 @@
     padding: 0 15px;
 }
 
-#main {
+#root {
+    background: var(--color-black);
     display: flex;
-    flex: 1;
 }
 
-#main > div {
+#left {
+    max-width: 250px;
     flex: 1;
+}
+#right {
+    flex: 1;
+    overflow: auto;
+    background-image: linear-gradient(rgb(47, 47, 47), var(--color-black-lighter) 55%);
 }
 
 /* MAIN AREA */
 #mainArea {
-    background-image: linear-gradient(rgb(47, 47, 47), var(--color-black-lighter) 55%);
     position: relative;
     overflow: auto;
-
-    padding: 30px 60px;
+    height: 100%;
+    max-width: 1500px;
+    padding: 30px;
+    margin: auto;
 }
 
 .main-header {
